fixed grid spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,10 +72,11 @@ footer {
 
 footer h3 {
   font-family: var(--heading-font-family);
+  
 }
 
 footer p {
-  margin-right: 20px;
+  
 }
 
 footer ul {
@@ -91,6 +92,7 @@ footer li {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 20px;
 }
 
 footer a {
